# corbaClientServer

./: ActionMenu.qml  CMakeLists.txt  EntryDelegate.qml  HeadControls.qml  ReadMe.md  client.cpp  idl_compile.sh  leak_research.txt  main.qml  qml.qrc  server.cpp  task.txt
idl/: object.idl
inc/: APhonesModel.h  APhonesModelManager.h  Action.h  CorbaLoader.h  DBManager.h  EntriesModel.h  Entry.h  ModelManager.h  PhoneGeneral.h  Servant.h  Server.h  Visitor.h  cpp2idlEntry.h  generate.h  object.hh
lib/clientSide/: CMakeLists.txt
lib/clientSide/idl/: object.idl
lib/clientSide/inc/: object.hh
lib/serverSide/: CMakeLists.txt
lib/serverSide/inc/: Servant.h
lib/serverSide/src/: Servant.cpp  objectSK.cc
src/: APhonesModel.cpp  APhonesModelManager.cpp  Action.cpp  CorbaLoader.cpp  CorbaLoader.cpp.autosave  DBManager.cpp  EntriesModel.cpp  EntriesModel.cpp.autosave  Entry.cpp  ModelManager.cpp  Servant.cpp  Server.cpp  Visitor.cpp  cpp2idlEntry.cpp  generate.cpp  objectSK.cc
test/: all_unit_tests.cpp
